fixed layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
-/* .imgPanel {
-    height: 300px;
-} */
+.grid-wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
